force-app/main/default/objects/cdcpc__RD_Handling_Support_Part_Number__c/cdcpc__RD_Handling_Support_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Handling Support Part Number</label>
    <nameField>
        <label>RD Handling Support Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Handling Support Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>