force-app/main/default/objects/cdcpc__RD_Handling_Support_Part_Number__c/fields/cdcpc__MCHS__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCHS__c</fullName>
    <label>MCHS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>